tests/field/undefined_method.rev
struct Foo {}

var foo = Foo()
foo.bar() // error: structure 'Foo' has no field 'bar'